--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.main.class>de.idrinth.load.Main</maven.main.class>
     </properties>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
         <dependency>
@@ -35,6 +41,11 @@
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>4.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.everit-org.json-schema</groupId>
+            <artifactId>org.everit.json.schema</artifactId>
+            <version>1.11.1</version>
         </dependency>
     </dependencies>
     <build>
